Fix user modal overflow and horizontal scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html,
+html {
+  overflow-x: hidden;
+}
 body,
 #root {
   height: 100%;
@@ -86,3 +88,7 @@ body,
   background-color: #CC3366 !important;
   /*  90%to100%-red */
 }
+.dropdown-menu.show {
+  transform: translate3d(-16px, 40px, 0px) !important;
+}
+
